@@ -39,6 +39,21 @@ jobs:
                   rm /work/dist/*.tar.gz
                   rename .rpm .rhel9.rpm /work/dist/*.rpm
                   mv /work/dist/* artifacts/
+          - name: Build on fedora39
+            uses: addnab/docker-run-action@v3
+            with:
+                image: fedora:39
+                options: -v ${{ github.workspace }}:/work
+                run: |
+                  yum -yq install rpm-build python3 \
+                    python3-setuptools util-linux
+                  mkdir -p /work/dist/fedora39
+                  cd /work/
+                  python3.12 setup.py bdist_rpm --python /usr/bin/python3.12 \
+                    --requires "python3-libvirt python3-libnbd python3-lxml python3-tqdm python3-lz4 nbdkit-server nbdkit-python-plugin python3-paramiko python3-typing-extensions python3-colorlog qemu-img openssh-clients"
+                  rm /work/dist/*.tar.gz
+                  rename .rpm .fedora39.rpm /work/dist/*.rpm
+                  mv /work/dist/* artifacts/
           - name: Build on opensuse
             uses: addnab/docker-run-action@v3
             with:
@@ -105,6 +120,17 @@ jobs:
                 run: |
                   yum -yq install epel-release
                   yum -yq install /work/artifacts/*noarch*rhel9.rpm
+                  virtnbdbackup -h
+                  virtnbdrestore -h
+                  virtnbdmap -h
+          - name: Test installation on fedora39
+            uses: addnab/docker-run-action@v3
+            with:
+                image: fedora:39
+                options: -v ${{ github.workspace }}:/work
+                run: |
+                  yum -yq install epel-release
+                  yum -yq install /work/artifacts/*noarch*fedora39.rpm
                   virtnbdbackup -h
                   virtnbdrestore -h
                   virtnbdmap -h
