@@ -1,5 +1,6 @@
 Version 2.8
 ---------
+ * Add packages compatible to fedora 39 to package build (#174)
 
 
 Version 2.7
